--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -30,7 +30,6 @@ body {
 		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
 }
 
-h1,
 h2,
 p {
 	font-weight: 400;
@@ -50,8 +49,9 @@ a:hover {
 }
 
 h1 {
-	font-size: 2rem;
+	font-size: 350px;
 	text-align: center;
+	font-family: 'Kelsi 1'
 }
 
 h2 {
