--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,33 +1,10 @@
 @import '@fontsource/fira-mono';
-
-:root {
-	--font-body: Arial, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu,
-		Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	--font-mono: 'Fira Mono', monospace;
-	--color-bg-0: rgb(228, 216, 228);
-	--color-bg-1: hsl(344, 36%, 86%);
-	--color-bg-2: hsl(224, 44%, 95%);
-	--color-theme-1: #cc3c29;
-	--color-theme-2: #4075a6;
-	--color-text: rgba(0, 0, 0, 0.7);
-	--column-width: 42rem;
-	--column-margin-top: 4rem;
-	font-family: var(--font-body);
-	color: var(--color-text);
-}
+@import url('https://fonts.cdnfonts.com/css/kelsi');
 
 body {
 	min-height: 100vh;
 	margin: 0;
 	background-attachment: fixed;
-	background-color: var(--color-bg-2);
-	background-size: 100vw 100vh;
-	background-image: radial-gradient(
-			50% 50% at 50% 50%,
-			rgba(255, 255, 255, 0.75) 0%,
-			rgba(255, 255, 255, 0) 100%
-		),
-		linear-gradient(180deg, var(--color-bg-0) 0%, var(--color-bg-1) 15%, var(--color-bg-2) 50%);
 }
 
 h2,
@@ -40,7 +17,7 @@ p {
 }
 
 a {
-	color: var(--color-theme-1);
+	color: #0F3446;
 	text-decoration: none;
 }
 
@@ -51,11 +28,13 @@ a:hover {
 h1 {
 	font-size: 350px;
 	text-align: center;
-	font-family: 'Kelsi 1'
+	color: #0F3446;
+	font-family: 'Kelsi 1', sans-serif;
+
 }
 
 h2 {
-	font-size: 1rem;
+	font-size: 36px;
 }
 
 pre {
