--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -39,13 +39,11 @@ h2 {
 
 pre {
 	font-size: 16px;
-	font-family: var(--font-mono);
 	background-color: rgba(255, 255, 255, 0.45);
 	border-radius: 3px;
 	box-shadow: 2px 2px 6px rgb(255 255 255 / 25%);
 	padding: 0.5em;
 	overflow-x: auto;
-	color: var(--color-text);
 }
 
 .text-column {
@@ -72,7 +70,9 @@ button:focus:not(:focus-visible) {
 		font-size: 2.4rem;
 	}
 }
-
+.with-image {
+	background-image: url("$lib/images/bkg.jpg")
+}
 .visually-hidden {
 	border: 0;
 	clip: rect(0 0 0 0);
