--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -1,7 +1,7 @@
 @import '@fontsource/fira-mono';
 @import url('https://fonts.cdnfonts.com/css/kelsi');
 @font-face {
-	font-family: "Integral CF Regular";
+	font-family: "Integral CF";
 	src: url("https://db.onlinewebfonts.com/t/f1fcc5aed1e20fc0cdb9f8a7573625bd.eot");
 	src: url("https://db.onlinewebfonts.com/t/f1fcc5aed1e20fc0cdb9f8a7573625bd.eot?#iefix")format("embedded-opentype"),
 	url("https://db.onlinewebfonts.com/t/f1fcc5aed1e20fc0cdb9f8a7573625bd.woff2")format("woff2"),
